package bwl.oo.paket3;

public class Angestellter {
  
  public String vorname;
  public String nachname;
  
  
  public Angestellter(String vorname, String nachname) {
    super();
    this.vorname = vorname;
    this.nachname = nachname;
  }
  

}

