package bwl.oo.paket3;

import java.util.Vector;

public class Vorlesung {
  
  public String titel;
  public Angestellter professor;
  
  public Vorlesung(String titel, Angestellter professor) {
    super();
    this.titel = titel;
    this.professor = professor;
  }  
}

